--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,28 +1,47 @@
-name: CI
+name: CI/CD
+
 on:
   push:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-  workflow_dispatch:
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
         with:
-          python-version: 3.12
-      - name: install packages
-        run: make install
-      - name: format
+          toolchain: stable
+          profile: minimal
+          components: clippy, rustfmt
+          override: true
+
+      - name: Check
+        run: make check
+
+      - name: Format
         run: make format
-      - name: lint
+
+      - name: Lint
         run: make lint
-      - name: test
-        env:
-          SERVER_HOSTNAME: ${{ secrets.SERVER_HOSTNAME }}
-          HTTP_PATH: ${{ secrets.HTTP_PATH }}
-          DATABRICKS_KEY: ${{ secrets.DATABRICKS_KEY }}
+
+      - name: Test
         run: make test
+
+      - name: Build
+        run: make build
+
+      - name: Upload Binary Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Rust Artificat Binary
+          path: target/release/Wenye_Li_Individual_Project_2.exe
