--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "drug-use-sqlite"
+name = "drug_use_sqlite"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking"] }
-rusqlite = "0.28"
-csv = "1.1"
-clap = { version = "4.1", features = ["derive"] }
+rusqlite = "0.29.0"
+csv = "1.2.2"
+reqwest = { version = "0.11.18", features = ["blocking", "json"] }
+chrono = "0.4.26"
