Organize CI/CD workflow and Makefile for Rust development environment

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,9 +25,6 @@ jobs:
           components: clippy, rustfmt
           override: true
 
-      - name: Check
-        run: make check
-
       - name: Format
         run: make format
 
@@ -37,6 +34,9 @@ jobs:
       - name: Test
         run: make test
 
+      - name: Check
+        run: make check
+
       - name: Build
         run: make build
 
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Rust Artificat Binary
-          path: target/release/Wenye_Li_Individual_Project_2.exe
+          path: target/release/drug_use_sqlite
