--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ rusqlite = "0.29.0"
 csv = "1.2.2"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 chrono = "0.4.26"
+clap = { version = "4.5.1", features = ["derive"] }
